# web-giris

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yml  dev-compose.yml  init.sql
core/: .env  Cargo.toml  Dockerfile
core/src/: handlers.rs  main.rs  models.rs  routes.rs
postgres/: Dockerfile  compose.yml  init.sql
src/: handlers.rs  main.rs  models.rs  routes.rs
swagger/: Dockerfile  openapi.json
